--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "next": "15.1.7",
     "openai": "^4.85.1",
     "papaparse": "^5.5.2",
+    "posthog-js": "^1.236.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "recharts": "^2.15.3",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "stripe": "^17.7.0",
